--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         X:<input id="x" type="number"/>
         Y:<input id="y" type="number"/>        
         <button onclick="app.publishPoint($('#x').val(),$('#y').val())">Send point</button>
+
+        Conexion number<input id="conNumber" type="number"/>        
+        <button onclick="app.connect()">Conectar</button>
+
         <canvas id="canvas" width="800" height="600"></canvas>
     </body>
 </html>
